# ENPM808X_Midterm_Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.cpp  camera.hpp
.github/workflows/: c-cpp.yml
UML/Initial/: activityDiagram.activity.violet.html  classDiagram.class.violet.html
UML/revise_1/: Revise_Class.class.violet.html
UML/revise_2/: ClassDiagram.class.violet.html  activityDiagram.activity.violet.html
app/: CMakeLists.txt  camera.cpp  detector.cpp  humanTracker.cpp  main.cpp  obstacle.cpp  tracker.cpp
docs/html/: annotated.html  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8hpp.html  camera_8hpp__dep__incl.map  camera_8hpp__dep__incl.md5  camera_8hpp__incl.map  camera_8hpp__incl.md5  camera_8hpp_source.html  classCamera-members.html  classCamera.html  classDetector-members.html  classDetector.html  classHumanTracker-members.html  classHumanTracker.html  classObstacle-members.html  classObstacle.html  classTracker-members.html  classTracker.html  classes.html  detector_8cpp.html  detector_8cpp__incl.map  detector_8cpp__incl.md5  detector_8hpp.html  detector_8hpp__dep__incl.map  detector_8hpp__dep__incl.md5  detector_8hpp__incl.map  detector_8hpp__incl.md5  detector_8hpp_source.html  dir_000000_000001.html  dir_d422163b96683743ed3963d4aac17747.html  (+54 more)
include/: camera.hpp  detector.hpp  humanTracker.hpp  obstacle.hpp  tracker.hpp  utils.hpp
model_utils/: yolov3.cfg
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  camera_test.cpp  detector_test.cpp  humanTracker_test.cpp  main.cpp  test.cpp  tracker_test.cpp
(+53 files in other folders)
